codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__preamble_keeps_working_status.snap
---
source: tui/src/chatwidget/tests/exec_flow.rs
expression: normalized_backend_snapshot(terminal.backend())
---
"                                                                                "
"✦ Working                                                     0s · Esc interrupt"
"                                                                                "
"────────────────────────────────────────────────────────────────────────────────"
"│›                                                                              "
"────────────────────────────────────────────────────────────────────────────────"
"  GPT 5.6 Sol Default · /tmp/project                                            "
