codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__pro_slash_command_popup.snap
---
source: tui/src/chatwidget/tests/slash_commands.rs
expression: popup
---
› /pro       toggle Pro reasoning mode
  /provider  choose which model provider to use
────────────────────────────────────────────────────────────────────────────────
│› /pro
────────────────────────────────────────────────────────────────────────────────
